cmake_minimum_required(VERSION 3.5)

project(c_programming_a_modern_approach_2nd)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic -O0 -std=c99")
# set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic -O2 -std=c99")

add_executable(_02_01_ _02_01_.c)
add_executable(_02_02_ _02_02_.c)
add_executable(_02_03_ _02_03_.c)
add_executable(_02_04_ _02_04_.c)
add_executable(_02_05_ _02_05_.c)
add_executable(_02_06_ _02_06_.c)
add_executable(_02_07_ _02_07_.c)
add_executable(_02_08_ _02_08_.c)

add_executable(_03_01_ _03_01_.c)
add_executable(_03_02_ _03_02_.c)
add_executable(_03_03_ _03_03_.c)
add_executable(_03_04_ _03_04_.c)
add_executable(_03_05_ _03_05_.c)
add_executable(_03_06_ _03_06_.c)

add_executable(_04_01_ _04_01_.c)
add_executable(_04_02_ _04_02_.c)
add_executable(_04_03_ _04_03_.c)
add_executable(_04_04_ _04_04_.c)
add_executable(_04_05_ _04_05_.c)
add_executable(_04_06_ _04_06_.c)

add_executable(_05_01_ _05_01_.c)
add_executable(_05_02_ _05_02_.c)
add_executable(_05_03_ _05_03_.c)
add_executable(_05_04_ _05_04_.c)
add_executable(_05_05_ _05_05_.c)
add_executable(_05_06_ _05_06_.c)
add_executable(_05_07_ _05_07_.c)
add_executable(_05_08_ _05_08_.c)
add_executable(_05_09_ _05_09_.c)
add_executable(_05_10_ _05_10_.c)
add_executable(_05_11_ _05_11_.c)

add_executable(_06_01_ _06_01_.c)
add_executable(_06_02_ _06_02_.c)
add_executable(_06_03_ _06_03_.c)
add_executable(_06_04_ _06_04_.c)
add_executable(_06_05_ _06_05_.c)
# add_executable(_06_06_ _06_06_.c)
# add_executable(_06_07_ _06_07_.c)
# add_executable(_06_08_ _06_08_.c)
# add_executable(_06_09_ _06_09_.c)
# add_executable(_06_10_ _06_10_.c)
# add_executable(_06_11_ _06_11_.c)
# add_executable(_06_12_ _06_12_.c)
