cmake_minimum_required(VERSION 3.5)

project(c-programming-a-modern-approach-2nd)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_FLAGS_DEBUG "-g -O0 -std=c99")
set(CMAKE_C_FLAGS_RELEASE "-Wall -Wextra -pedantic -O3 -std=c99")

add_executable(_02_01_ _02_01_.c)
add_executable(_02_02_ _02_02_.c)
add_executable(_02_03_ _02_03_.c)
add_executable(_02_04_ _02_04_.c)
add_executable(_02_05_ _02_05_.c)
add_executable(_02_06_ _02_06_.c)
add_executable(_02_07_ _02_07_.c)
add_executable(_02_08_ _02_08_.c)

add_executable(_03_01_ _03_01_.c)
add_executable(_03_02_ _03_02_.c)
add_executable(_03_03_ _03_03_.c)
add_executable(_03_04_ _03_04_.c)
add_executable(_03_05_ _03_05_.c)
add_executable(_03_06_ _03_06_.c)

add_executable(_04_01_ _04_01_.c)
add_executable(_04_02_ _04_02_.c)
add_executable(_04_03_ _04_03_.c)
add_executable(_04_04_ _04_04_.c)
add_executable(_04_05_ _04_05_.c)
add_executable(_04_06_ _04_06_.c)

add_executable(_05_01_ _05_01_.c)
add_executable(_05_02_ _05_02_.c)
add_executable(_05_03_ _05_03_.c)
add_executable(_05_04_ _05_04_.c)
add_executable(_05_05_ _05_05_.c)
add_executable(_05_06_ _05_06_.c)
add_executable(_05_07_ _05_07_.c)
add_executable(_05_08_ _05_08_.c)
add_executable(_05_09_ _05_09_.c)
add_executable(_05_10_ _05_10_.c)
add_executable(_05_11_ _05_11_.c)

add_executable(_06_01_ _06_01_.c)
add_executable(_06_02_ _06_02_.c)
add_executable(_06_03_ _06_03_.c)
add_executable(_06_04_ _06_04_.c)
add_executable(_06_05_ _06_05_.c)
add_executable(_06_06_ _06_06_.c)
add_executable(_06_07_ _06_07_.c)
add_executable(_06_08_ _06_08_.c)
add_executable(_06_09_ _06_09_.c)
add_executable(_06_10_ _06_10_.c)
add_executable(_06_11_ _06_11_.c)
add_executable(_06_12_ _06_12_.c)

add_executable(_07_01_ _07_01_.c)
add_executable(_07_02_ _07_02_.c)
add_executable(_07_03_ _07_03_.c)
add_executable(_07_04_ _07_04_.c)
add_executable(_07_05_ _07_05_.c)
add_executable(_07_06_ _07_06_.c)
add_executable(_07_07_ _07_07_.c)
add_executable(_07_08_ _07_08_.c)
add_executable(_07_09_ _07_09_.c)
add_executable(_07_10_ _07_10_.c)
add_executable(_07_11_ _07_11_.c)
add_executable(_07_12_ _07_12_.c)
add_executable(_07_13_ _07_13_.c)
add_executable(_07_14_ _07_14_.c)
add_executable(_07_15_a_ _07_15_a_.c)
add_executable(_07_15_b_ _07_15_b_.c)
add_executable(_07_15_c_ _07_15_c_.c)
add_executable(_07_15_d_ _07_15_d_.c)
add_executable(_07_15_e_ _07_15_e_.c)
add_executable(_07_15_f_ _07_15_f_.c)
add_executable(_07_15_g_ _07_15_g_.c)

add_executable(_08_01_ _08_01_.c)
add_executable(_08_02_ _08_02_.c)
add_executable(_08_03_ _08_03_.c)
add_executable(_08_04_ _08_04_.c)
add_executable(_08_05_ _08_05_.c)
add_executable(_08_06_ _08_06_.c)
add_executable(_08_07_ _08_07_.c)
add_executable(_08_08_ _08_08_.c)
add_executable(_08_09_ _08_09_.c)
add_executable(_08_10_ _08_10_.c)
add_executable(_08_11_ _08_11_.c)
add_executable(_08_12_ _08_12_.c)
add_executable(_08_13_ _08_13_.c)
add_executable(_08_14_ _08_14_.c)
add_executable(_08_15_ _08_15_.c)
add_executable(_08_16_ _08_16_.c)
add_executable(_08_17_ _08_17_.c)

add_executable(_09_01_ _09_01_.c)
add_executable(_09_02_ _09_02_.c)
add_executable(_09_03_ _09_03_.c)
add_executable(_09_04_ _09_04_.c)
add_executable(_09_05_ _09_05_.c)
add_executable(_09_06_ _09_06_.c)
add_executable(_09_07_ _09_07_.c)
add_executable(_09_08_ _09_08_.c)

add_executable(_10_01_ _10_01_.c)
add_executable(_10_02_ _10_02_.c)
add_executable(_10_03_ _10_03_.c)
add_executable(_10_04_ _10_04_.c)
add_executable(_10_05_ _10_05_.c)
add_executable(_10_06_ _10_06_.c)
add_executable(_10_07_ _10_07_.c)

add_executable(_11_01_ _11_01_.c)
add_executable(_11_02_ _11_02_.c)
add_executable(_11_03_ _11_03_.c)
add_executable(_11_04_ _11_04_.c)

add_executable(_12_01_ _12_01_.c)
add_executable(_12_02_ _12_02_.c)
add_executable(_12_03_ _12_03_.c)
add_executable(_12_04_ _12_04_.c)
add_executable(_12_05_ _12_05_.c)
add_executable(_12_06_ _12_06_.c)
add_executable(_12_07_ _12_07_.c)

add_executable(_13_01_ _13_01_.c)
add_executable(_13_02_ _13_02_.c)
add_executable(_13_03_ _13_03_.c)
add_executable(_13_04_ _13_04_.c)
add_executable(_13_05_ _13_05_.c)
add_executable(_13_06_ _13_06_.c)
add_executable(_13_07_ _13_07_.c)
add_executable(_13_08_ _13_08_.c)
add_executable(_13_09_ _13_09_.c)
add_executable(_13_10_ _13_10_.c)
add_executable(_13_11_ _13_11_.c)
add_executable(_13_12_ _13_12_.c)
add_executable(_13_13_ _13_13_.c)
add_executable(_13_14_ _13_14_.c)
add_executable(_13_15_ _13_15_.c)
add_executable(_13_16_ _13_16_.c)
add_executable(_13_17_ _13_17_.c)
add_executable(_13_18_ _13_18_.c)

add_executable(
    _15_01_
    chapter-15-01/justify.c
    chapter-15-01/line.c
    chapter-15-01/word.c
    chapter-15-01/line.h
    chapter-15-01/word.h
)

add_executable(
    _15_02_
    chapter-15-02/justify.c
    chapter-15-02/line.c
    chapter-15-02/word.c
    chapter-15-02/line.h
    chapter-15-02/word.h
)

add_executable(
    _15_03_
    chapter-15-03/qsort.c
    chapter-15-03/quicksort.c
    chapter-15-03/quicksort.h
)

add_executable(
    _15_04_
    chapter-15-04/remind.c
    chapter-15-04/readline.c
    chapter-15-04/readline.h
)

add_executable(
    _15_05_
    chapter-15-05/_15_05_.c
    chapter-15-05/stack.c
    chapter-15-05/stack.h
)

add_executable(_16_01_ _16_01_.c)

add_executable(
    _16_02_
    chapter-16-02/inventory.c
    chapter-16-02/readline.c
    chapter-16-02/readline.h
)

add_executable(
    _16_03_
    chapter-16-03/inventory.c
    chapter-16-03/readline.c
    chapter-16-03/readline.h
)

add_executable(
    _16_04_
    chapter-16-04/inventory.c
    chapter-16-04/readline.c
    chapter-16-04/readline.h
)

add_executable(_16_05_ _16_05_.c)
add_executable(_16_06_ _16_06_.c)

add_executable(
    _17_01_
    chapter-17-01/inventory.c
    chapter-17-01/readline.c
    chapter-17-01/readline.h
)

add_executable(
    _17_02_
    chapter-17-02/inventory.c
    chapter-17-02/readline.c
    chapter-17-02/readline.h
)

add_executable(
    _17_03_
    chapter-17-03/inventory2.c
    chapter-17-03/readline.c
    chapter-17-03/readline.h
)

add_executable(
    _17_04_
    chapter-17-04/justify.c
    chapter-17-04/line.c
    chapter-17-04/word.c
    chapter-17-04/line.h
    chapter-17-04/word.h
)
